--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "isomorphic-unfetch": "^3.1.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sass": "^1.52.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6"
   }
