--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "isomorphic-unfetch": "^3.1.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sass": "^1.52.3"
   },
   "devDependencies": {
     "eslint": "8.16.0",
