--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "csvtojson": "^2.0.10",
+    "html2canvas": "^1.4.1",
     "isomorphic-unfetch": "^3.1.0",
     "next": "12.1.6",
     "react": "18.1.0",
